[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["zeyizhou <zzy28101994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9"
dummy-wx = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
